incubator/minecraft-bedrock/0.0.6/CONFIG.md
# minecraft-bedrock

![Version: 0.0.6](https://img.shields.io/badge/Version-0.0.6-informational?style=flat-square) ![AppVersion: 2022.1.0](https://img.shields.io/badge/AppVersion-2022.1.0-informational?style=flat-square)

Minecraft Bedrock Dedicated Server

**Homepage:** <https://github.com/Dyllan20000alfa/apps/tree/master/charts/incubator/minecraft-bedrock>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/itzg/docker-minecraft-server>
* <https://hub.docker.com/r/itzg/minecraft-server>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org | common | 8.14.5 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.ALLOW_CHEATS | bool | `false` |  |
| env.CORRECT_PLAYER_MOVEMENT | bool | `false` |  |
| env.DEFAULT_PLAYER_PERMISSION_LEVEL | string | `"member"` |  |
| env.DIFFICULTY | string | `"easy"` |  |
| env.EULA | string | `"FALSE"` |  |
| env.GAMEMODE | string | `"survival"` |  |
| env.GID | int | `568` |  |
| env.LEVEL_NAME | string | `"Bedrock level"` |  |
| env.LEVEL_SEED | string | `""` |  |
| env.LEVEL_TYPE | string | `"DEFAULT"` |  |
| env.MAX_PLAYERS | int | `10` |  |
| env.MAX_THREADS | int | `8` |  |
| env.ONLINE_MODE | bool | `true` |  |
| env.PLAYER_IDLE_TIMEOUT | int | `30` |  |
| env.PLAYER_MOVEMENT_DISTANCE_THRESHOLD | float | `0.3` |  |
| env.PLAYER_MOVEMENT_DURATION_THRESHOLD_IN_MS | int | `500` |  |
| env.PLAYER_MOVEMENT_SCORE_THRESHOLD | int | `20` |  |
| env.SERVER_AUTHORITATIVE_MOVEMENT | string | `"server-auth"` |  |
| env.SERVER_NAME | string | `"Dedicated Server on TrueNAS Scale!"` |  |
| env.SERVER_PORT | int | `19132` |  |
| env.SERVER_PORT_V6 | int | `19133` |  |
| env.TEXTUREPACK_REQUIRED | bool | `false` |  |
| env.TICK_DISTANCE | int | `4` |  |
| env.UID | int | `568` |  |
| env.VERSION | string | `"LATEST"` |  |
| env.VIEW_DISTANCE | int | `32` |  |
| env.WHITE_LIST | bool | `false` |  |
| image.pullPolicy | string | `"Always"` |  |
| image.repository | string | `"itzg/minecraft-bedrock-server"` |  |
| image.tag | string | `"2022.1.0@sha256:fd753dd3fbee83944baf4982e481a7d48a4d52387d6bd3916628335e8bdb4ed6"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/data"` |  |
| probes.liveness | object | See below | Liveness probe configuration |
| probes.readiness | object | See below | Redainess probe configuration |
| probes.startup | object | See below | Startup probe configuration |
| service.main.ports.main.port | int | `19132` |  |
| service.main.ports.main.protocol | string | `"UDP"` |  |
| service.main.ports.main.targetPort | int | `19132` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
